--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "mobiledetect/mobiledetectlib": "2.*",
         "cakephp/migrations": "~1.0",
         "cakephp/plugin-installer": "~1.0",
-        "twbs/bootstrap":"4.0.0-alpha.6"
+        "twbs/bootstrap":"4.0.0-alpha.6",
+        "abraham/twitteroauth": "^0.7.4"
     },
     "require-dev": {
         "psy/psysh": "@stable",
